# colosseum

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
colosseum/deploy/: deploy.py  test.py
colosseum/deploy/configs/: T1.yaml
colosseum/deploy/utils/: command.py  policy.py  remote_control_service.py  rotate.py
colosseum/utils/: model.py
robots/T1/: T1_locomotion.xml
typings/: booster_robotics_sdk_python.pyi
