[project]
name = "colosseum"
requires-python = "==3.11"

[tool.pixi.workspace]
channels = [
  "https://prefix.dev/pixi-build-backends",
  "https://prefix.dev/conda-forge",
  "https://prefix.dev/robostack-jazzy",
]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.feature.cpu.tasks]
deploy-cpu = "python -m colosseum.scripts.deploy"

[tool.pixi.dependencies]
pybind11 = ">=3.0.1,<4"
pybind11-stubgen = ">=2.4.2,<3"
ros-jazzy-fastrtps = ">=2.14.4,<3"
ros-jazzy-fastcdr = ">=2.2.5,<3"
foonathan-memory = ">=0.7.3,<0.8"
evdev = ">=1.9.2,<2"
setuptools = ">=80.9.0,<81"
tensorboard = ">=2.20.0,<3"
pyyaml = ">=6.0.3,<7"
imageio = ">=2.37.0,<3"
wandb = ">=0.22.2,<0.23"

[tool.pixi.pypi-dependencies]
fast_td3 = {git = "https://github.com/younggyoseo/FastTD3.git", branch = "main"}
sshkeyboard = "==2.3.1"
mujoco = "==3.3.7"

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "*"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.environments]
cpu = ["cpu"]
default = ["gpu"]

[tool.pixi.activation.env]
PATH = "$CONDA_PREFIX/bin:$PATH"
LD_LIBRARY_PATH = "$LD_LIBRARY_PATH:$CONDA_PREFIX/lib"
PYTHONPATH = "/usr/local/lib/python3.11/dist-packages:$PYTHONPATH"
